--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 * {
   margin: 0px;
   padding: 0px;
-  /* border: solid 1px black; */
+  border: solid 1px blue;
 }
 
 header {
-  text-align: right;
+  text-align: center;
   height: 140px;
-  width: 800px;
+  width: 950px;
   font-size: 44px;
   padding-top: 60px;
 }
@@ -16,6 +16,11 @@ main {
   display: flex;
   justify-content: space-around;
   padding-top: 200px;
+}
+
+img {
+  width: 25px;
+  height: 25px;
 }
 
 .color-palette {
@@ -45,15 +50,25 @@ main {
 
 .square {
   background-color: red;
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 150px;
+  border: 2px solid black;
+  border-radius: 6px;
 }
 
 .side-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 100vh;
   margin-top: -400px;
   padding-top: 80px;
   padding-right: 150px;
   padding-left: 150px;
-  border-left: solid 1px black;
+  border-left: solid 3px black;
+}
+
+.mini-square {
+  height: 20px;
+  width: 20px;
 }
